added per system font sizes

--- a/init.org
+++ b/init.org
@@ -301,12 +301,15 @@ I use [[https://github.com/catppuccin/emacs][catppuccin]] as my theme, with the 
 My current preferred font is [[https://www.jetbrains.com/lp/mono/][jetbrains mono]].
 
 #+begin_src emacs-lisp
-  (defvar akselos/font-height 140)
-    
-    (set-face-attribute 'default nil :height akselos/font-height)
+  (defvar akselos/font-height 115)
 
-;;  (when (member "JetBrains Mono" (font-family-list))
-;;    (set-face-attribute 'default nil :font "JetBrains Mono" :height akselos/font-height)
+  (when (eq system-type 'darwin)
+    (setq akselos/font-height 140))
+      
+      (set-face-attribute 'default nil :height akselos/font-height)
+
+  ;;  (when (member "JetBrains Mono" (font-family-list))
+  ;;    (set-face-attribute 'default nil :font "JetBrains Mono" :height akselos/font-height)
 #+end_src
 
 *** Icons and Emojis
