mightve fixed fonts?

--- a/init.org
+++ b/init.org
@@ -1,3 +1,4 @@
+
 #+title: Muh Emacs Config
 #+author: Aksel Olav Steen
 :properties:
@@ -305,11 +306,11 @@ My current preferred font is [[https://www.jetbrains.com/lp/mono/][jetbrains mon
 
 (when (eq system-type 'darwin)
   (setq akselos/font-height 140))
-    
+      
     (set-face-attribute 'default nil :height akselos/font-height)
 
-;;  (when (member "JetBrains Mono" (font-family-list))
-;;    (set-face-attribute 'default nil :font "JetBrains Mono" :height akselos/font-height)
+(when (member "JetBrains Mono" (font-family-list))
+  (set-face-attribute 'default nil :font "JetBrains Mono" :height akselos/font-height))
 #+end_src
 
 *** Icons and Emojis
