--- a/init.org
+++ b/init.org
@@ -355,6 +355,7 @@ Instead of the startup screen, I use [[https://github.com/emacs-dashboard/emacs-
 (use-package dashboard
   :config
   (setq dashboard-projects-backend 'project-el
+        dashboard-startup-banner "~/.emacs.d/images/hatterene.png"
         dashboard-banner-logo-title nil
         dashboard-center-content t
         dashboard-page-separator "\n\n\n"
@@ -753,7 +754,7 @@ and automatically expand it into function templates. I use this over abbrevs.
 
 #+begin_src emacs-lisp
 (use-package jinx
-  :hook (emacs-startup . global-jinx-mode)
+  :hook (org-mode . jinx-mode)
   :bind ("C-." . jinx-correct)
   :config
   (setq jinx-languages "en_US nb-no"))
