--- a/init.org
+++ b/init.org
@@ -977,6 +977,7 @@ This is WIP as ox-latex isn't in Nix.
          org-agenda-start-on-weekday nil
          org-agenda-block-separator  nil
          org-agenda-remove-tags      t)
+   (define-key custom-bindings-map (kbd "C-c a") 'org-agenda)
    #+end_src
 
 *** Super Agenda
@@ -994,25 +995,6 @@ This is WIP as ox-latex isn't in Nix.
      (org-super-agenda-mode))
    #+end_src
 
-*** Org QL
-    [[https://github.com/alphapapa/org-ql][org-ql]] is a searching tool for Org-mode, including custom query
-    languages, commands, saved searches and agenda-like views, etc.
-
-    #+begin_src emacs-lisp
-    (use-package org-ql
-      :after org
-      :config
-      (add-to-list 'org-ql-views
-                   '("Questions" :buffers-files org-agenda-files :query
-                     (and
-                      (not
-                       (done))
-                      (todo "QUESTION"))
-                     :sort
-                     (todo priority date)
-                     :super-groups org-super-agenda-groups :title "Agenda-like")))
-    #+end_src
-
 *** Agenda Views
     #+begin_src emacs-lisp    
     (setq org-agenda-custom-commands nil)
@@ -1024,25 +1006,6 @@ This is WIP as ox-latex isn't in Nix.
     	(:name "Deadlines"
                :deadline t
                :order 2)))
-    #+end_src
-
-    #+begin_src emacs-lisp
-    (add-to-list 'org-agenda-custom-commands
-    	         '("d" "Day View"
-    		       ((agenda "" ((org-agenda-overriding-header "Day View")
-                                (org-agenda-span 'day)
-                                (org-super-agenda-groups regular-view-groups)))
-    		        (org-ql-block '(todo "PROG") ((org-ql-block-header "\n❯ In Progress")))
-    		        (org-ql-block '(todo "NEXT") ((org-ql-block-header "\n❯ Next Up")))
-                    (org-ql-block '(todo "WAIT") ((org-ql-block-header "\n❯ Waiting")))
-    		        (org-ql-block '(priority "A") ((org-ql-block-header "\n❯ Important"))))))
-
-
-    (add-to-list 'org-agenda-custom-commands
-    		     '("e" "Three-Day View"
-                   ((agenda "" ((org-agenda-span 3)
-                                (org-agenda-start-on-weekday nil)
-                                (org-deadline-warning-days 0))))))
     #+end_src
 
 *** Displaying Scheduled and Deadline Items
